--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
+Pyrogram==2.0.106
+tgcrypto
+pyshorteners
+aiohttp
+motor
+aiofiles
+dnspython
+python-dotenv
+domainers
+pyshortner
 aiohttp==3.8.1
 pymongo[srv]==3.12.3
 motor==2.5.1
-Pyrogram==2.0.30
 TgCrypto==1.2.3
-bs4
-pyshorteners
-heroku3
+PyBypass==2.0.1
+mdisky
+shortzy
 aiofiles
 validators
 python-dotenv
+uvloop
